add deposit handling
