# src/main/java/flapkap/vendingmachine/data/dto/ProductPurchasedDto.java
@@ -1,0 +1,22 @@
+package flapkap.vendingmachine.data.dto;
+
+public class ProductPurchasedDto {
+    private Long productId;
+    private Integer productAmount;
+
+    public Long getProductId() {
+        return productId;
+    }
+
+    public void setProductId(Long productId) {
+        this.productId = productId;
+    }
+
+    public Integer getProductAmount() {
+        return productAmount;
+    }
+
+    public void setProductAmount(Integer productAmount) {
+        this.productAmount = productAmount;
+    }
+}
