# src/main/java/flapkap/vendingmachine/data/dto/ProductPurchasedResponse.java
@@ -1,0 +1,6 @@
+package flapkap.vendingmachine.data.dto;
+
+import java.util.List;
+
+public record ProductPurchasedResponse(Double totalPrice, List<ProductPurchasedDto> products) {
+}
